# yolo-mlx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GUIDE_INFERENCE_VALIDATION.md  GUIDE_TRACKING.md  GUIDE_TRAINING_BENCHMARK.md  Makefile  README.md  pyproject.toml  webAI-contributor-license-agreement.md
.github/workflows/: ci.yml  publish.yml
configs/: coco.yaml
scripts/: _runtime_dirs.py  benchmark_tracking_collect_results.py  benchmark_tracking_generate_charts.py  benchmark_yolo26_collect_results.py  benchmark_yolo26_generate_charts.py  benchmark_yolo26_inference.py  benchmark_yolo26_training_cpu.py  benchmark_yolo26_training_mlx.py  benchmark_yolo26_training_mps.py  create_sample_video.py  download_coco_val2017.sh  download_mot17.sh  download_yolo26_models.sh  evaluate_coco_val.py  evaluate_mot17.py  evaluate_mot17_pytorch.py  run_mot17_benchmark.sh  track_demo.py
src/yolo26mlx/: __init__.py  __main__.py  cli.py
src/yolo26mlx/cfg/trackers/: botsort.yaml  bytetrack.yaml
src/yolo26mlx/converters/: __init__.py  convert.py
src/yolo26mlx/data/: __init__.py  coco_dataset.py
src/yolo26mlx/engine/: __init__.py  model.py  predictor.py  results.py  tracker.py  trainer.py  validator.py
src/yolo26mlx/nn/: __init__.py  tasks.py
src/yolo26mlx/nn/modules/: __init__.py  attention.py  block.py  conv.py  head.py  transformer.py
src/yolo26mlx/optim/: __init__.py  musgd.py
src/yolo26mlx/trackers/: __init__.py  basetrack.py  bot_sort.py  byte_tracker.py  kalman_filter.py  matching.py
src/yolo26mlx/trackers/utils/: __init__.py  gmc.py
src/yolo26mlx/utils/: __init__.py  coco_metrics.py  loss.py  mot_metrics.py  ops.py  tal.py  video.py
tests/: deep_test_mlx_tracking.py  test_botsort.py  test_cli.py  test_convert_helpers.py  test_mot_metrics.py  test_tracking.py
